--- a/Style_Main.css
+++ b/Style_Main.css
@@ -128,14 +128,17 @@ header {
     display: block;
     width: 100%;
     max-width: 700px;
-    margin: 5px auto;
-    padding: 10px 15px;
+    padding: 5px 0px;
     background-color: #44444400;
     color: white;
     text-decoration: none;
     border-radius: 5px;
     font-size: 16px;
     transition: background-color 0.3s;
+    text-align: left;
+}
+.Article_button a:hover {
+    color: #779cc4;
 }
 
 
