--- a/Style_Main.css
+++ b/Style_Main.css
@@ -31,9 +31,9 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    height: 50px;
+    height: 70px;
     background-color: black;
-    padding: 0 20px;
+    padding: 10px 20px;
     position: fixed;
     top: 0;
     left: 50%;
@@ -41,24 +41,36 @@ header {
     width: 100%;
     max-width: 700px;
     z-index: 1000;
-    border-bottom: 1px solid #ffffff;
+    border-bottom: 1px solid #ffffff;  /* 첫 번째 구분선 */
+}
+
+header::after {
+    content: '';
+    position: absolute;
+    bottom: 4px;  /* 두 번째 구분선의 위치 */
+    left: 0;
+    width: 100%;
+    height: 1px;
+    background-color: #ffffff;  /* 두 번째 구분선 */
 }
 
 .header-left {
     flex: 1;
     text-align: left;
-    font-size: 0.9rem;
+    font-size: 1.1rem;
     color: #ffffff;
+    margin-top: 5px;
 }
 
 .header-center {
     flex: 2;
     text-align: center;
+    margin-top: 5px;
 }
 
 .header-title {
     margin: 0;
-    font-size: 1.5rem;
+    font-size: 4rem;
     color: #ffffff;
 }
 
