--- a/Style_Main.css
+++ b/Style_Main.css
@@ -127,14 +127,7 @@ body::before {
 
 
 
-
-
-
-
-
-
 /* -----------------------------헤더 -----------------------------------*/
-
 header {
     display: flex;
     align-items: center;
@@ -154,20 +147,12 @@ header {
     border-radius: 30px 30px 30px 30px;  /* 모든 모서리를 둥글게 */
 }
 
-.header-left {
-    display: flex; /* 요소들을 가로로 나열 */
-    align-items: center; /* 수직 정렬 */
-
-}
-
 .header-right {
+    
     display: flex; /* 버튼들을 가로로 나열 */
     align-items: center; /* 수직 정렬 */
 }
 
-
-/* 아이콘 스타일도 그대로 유지 */
-.instagram-icon,
 .github-icon {
     width: 40px;
     height: auto;
@@ -175,21 +160,31 @@ header {
     transition: transform 0.2s;
 }
 
-.instagram-icon:hover,
-.github-icon:hover {
-    transform: scale(1.1);
+.instagram-icon {
+    width: 43px;
 }
 
-.nav-button {
-    margin-right: 15px; /* 버튼 간격 */
-    text-decoration: none; /* 밑줄 제거 */
-    color: #333; /* 글자 색상 */
-    font-weight: bold; /* 글자 두껍게 */
+
+.header-left{
+    text-align: left;
+    font-size: 20px;
 }
 
-.nav-button:hover {
-    color: #c2cfdd; /* 마우스 오버 시 색상 변경 */
-}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 /* ----------------------------본문 ----------------------------------- */
 
@@ -248,15 +243,65 @@ header {
     color: #ccc;
   }
   
+
+
+
+
+
+
+
+
   
+  .modal {
+    display: none; /* 기본적으로 숨김 */
+    position: fixed;
+    z-index: 1001;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(255, 255, 255, 0); /* 검은색 배경 */
+    background-color: rgba(255, 255, 255, 0); /* 투명도 */
+}
+
+.modal-content {
+    background-color: #728a91;
+    margin: 5% auto; /* 15% 위쪽 여백, 가운데 정렬 */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; /* 너비 */
+    border-radius: 20px;
+}
+
+.close {
+    color: #2e2d2d;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
 
 
+/* 모바일 환경 */
+@media screen and (max-width: 480px) {
+    .modal-content {
+        width: 97%; /* 모바일에서는 3% 남기고 꽉 차게 */
+    }
+}
 
-
-
-
-
-
+/* PC 환경 */
+@media screen and (min-width: 769px) {
+    .modal-content {
+        max-width: 1000px; /* PC에서는 100px을 넘지 않도록 */
+    }
+}
 
 
 
