--- a/BlogPage/Style_BlogPage.css
+++ b/BlogPage/Style_BlogPage.css
@@ -200,9 +200,41 @@ body, html {
 }
 
 
-
-
-
+.blog-toc {
+    max-width: 800px;
+    margin: 0 auto 20px auto;
+    padding: 10px;
+    background-color: rgba(255, 255, 255, 0);
+  }
+  
+  .blog-toc ul {
+    display: flex;
+    flex-direction: column;  /* 세로 정렬 */
+    gap: 10px;
+    padding: 0;
+    list-style: none;
+    margin: 20px 0;
+  }
+  
+  .blog-toc li {
+    margin: 0;
+  }
+  
+  .blog-toc a {
+    color: white;
+    background-color: rgba(255, 255, 255, 0);
+    padding: 8px 14px;
+    border-radius: 10px;
+    text-decoration: none;
+    font-size: 1.3rem;
+    transition: background-color 0.2s ease;
+  }
+  
+  .blog-toc a:hover {
+    background-color: rgba(255, 255, 255, 0.2);
+  }
+  
+  
 
 
 
@@ -218,7 +250,7 @@ body, html {
 footer {
     
     width: 100%; /* 전체 너비 */
-    margin-top: 1000px; /* 위쪽 여백 */
+    margin-top: 150px; /* 위쪽 여백 */
     text-align: center; /* 중앙 정렬 */
 }
   
