--- a/Style_index.css
+++ b/Style_index.css
@@ -204,7 +204,13 @@ header {
 
 
 
-
+@media screen and (max-width: 480px) {
+    .BlogBoard {
+      grid-template-columns: 1fr; /* 모바일에서는 한 줄에 하나씩 */
+      padding: 10px;
+    }
+  }
+  
 
 
 
