--- a/BlogPage/Style_BlogPage.css
+++ b/BlogPage/Style_BlogPage.css
@@ -234,7 +234,7 @@ body, html {
   
   
   @media (max-width: 768px) { 
-    .blog-insertedimage{
+    .blog-thumbnail{
         max-width: 350px;
     }
 }
