--- a/Style_index.css
+++ b/Style_index.css
@@ -114,6 +114,12 @@ header {
     font-size: 60px;
 }
 
+@media (max-width: 768px) { 
+    .HelloWord{
+        font-size: 50px;
+    }
+  }
+
 .BlogBoard {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
