--- a/Style_index.css
+++ b/Style_index.css
@@ -120,12 +120,47 @@ header {
     }
   }
 
+
+  .category-buttons {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    margin-bottom: 20px;
+  }
+  
+  .category-buttons button {
+    background-color: rgba(255, 255, 255, 0.2);
+    border: none;
+    color: #fff;
+    padding: 8px 16px;
+    border-radius: 15px;
+    cursor: pointer;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1),
+                inset 0 1px 0 rgba(255, 255, 255, 0.3);
+    transition: background-color 0.2s;
+  }
+  
+  .category-buttons button:hover {
+    background-color: rgba(255, 255, 255, 0.4);
+  }
+  .category-buttons button.active {
+    background-color: rgba(255, 255, 255, 0.5);
+    font-weight: bold;
+    transform: scale(1.05);
+  }
+  
+
+  
 .BlogBoard {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
     gap: 40px;
     padding: 20px;
     justify-items: center; /* 💡 버튼을 가운데 정렬 */
+}
+.BlogBoard .RecentItem {
+    max-width: 600px; /* 원하는 최대 너비를 설정해주세요 */
+    width: 100%;
 }
 
 /* 버튼 대신 a 태그에 스타일 적용 */
@@ -277,3 +312,32 @@ footer {
 .footer-text {
     white-space: nowrap;           /* 텍스트가 한 줄로 유지되도록 */
 }
+
+
+
+
+
+
+#topBtn {
+    display: none;
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+    z-index: 999;
+    border: none;
+    outline: none;
+    background-color: rgba(255, 255, 255, 0.3);
+    color: white;
+    cursor: pointer;
+    padding: 12px 16px;
+    border-radius: 50%;
+    font-size: 20px;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.3);
+    transition: background-color 0.2s, transform 0.2s;
+  }
+  
+  #topBtn:hover {
+    background-color: rgba(255, 255, 255, 0.6);
+    transform: scale(1.1);
+  }
+  
