--- a/Style_index.css
+++ b/Style_index.css
@@ -74,8 +74,15 @@ header {
     width: 35px;
 }
 .instagram-icon{
-    width: 38px;
+    width: 35px;
 }
+
+
+.github-button:hover,
+.instagram-button:hover {
+  transform: scale(1.1);
+}
+
 
 
 .home-buton {
@@ -88,7 +95,84 @@ header {
     color: #c2cfdd;        /* 마우스 오버 시 색상 변경 */
 }
 
+body::before {
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url('image/wall3.jpg') no-repeat center center;
+  background-size: cover;
+  filter: blur(80px);
+  z-index: -1;
+}
 
+/* 다크모드일 경우 */
+body.darkmode::before {
+  background: url('image/wall_dark.jpg') no-repeat center center;
+  background-size: cover;
+}
+
+.gotomygallerypage {
+  background-color: rgba(255, 255, 255, 0.2);
+  text-decoration: none;
+  color: white;
+  font-family: 'font', sans-serif;
+  font-size: 0.95rem;
+  font-weight: 500;
+  padding: 6px 18px;
+  border: none;
+  border-radius: 999px; /* 양끝 둥글게 */
+  margin-left: 10px;
+  backdrop-filter: blur(6px);
+  cursor: pointer;
+  transition: all 0.2s ease;
+  box-shadow: 
+    0 4px 6px rgba(0, 0, 0, 0.1), 
+    inset 0 1px 0 rgba(255, 255, 255, 0.3);
+}
+
+.gotomygallerypage:hover {
+  background-color: rgba(255, 255, 255, 0.35);
+  transform: scale(1.05);
+}
+
+
+.WallpaperBtn {
+  position: absolute;
+  top: 85px;
+  right: 10px;
+  z-index: 1000;
+
+  width: 44px;
+  height: 44px;
+  padding: 0;
+  border: none;
+  border-radius: 50%; /* 완전한 원형 */
+  background-color: rgba(255, 255, 255, 0.15);
+  backdrop-filter: blur(4px);
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  box-shadow:
+    0 4px 6px rgba(0, 0, 0, 0.1),  /* 외부 그림자 */
+    inset 0 1px 0 rgba(255, 255, 255, 0.3);  /* 내부 하이라이트 */
+
+  transition: transform 0.2s ease;
+  cursor: pointer;
+}
+
+.WallpaperBtn img {
+  width: 26px;
+  height: 26px;
+}
+
+.WallpaperBtn:hover {
+  transform: scale(1.1);
+}
 
 
 
@@ -321,18 +405,19 @@ footer {
 #topBtn {
     display: none;
     position: fixed;
-    bottom: 30px;
-    right: 30px;
+    bottom: 15px;
+    right: 15px;
     z-index: 999;
     border: none;
     outline: none;
     background-color: rgba(255, 255, 255, 0.3);
     color: white;
     cursor: pointer;
-    padding: 12px 16px;
+    padding: 12px 15px;
     border-radius: 50%;
     font-size: 20px;
-    box-shadow: 0 4px 8px rgba(0,0,0,0.3);
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1),
+                inset 0 1px 0 rgba(255, 255, 255, 0.3);
     transition: background-color 0.2s, transform 0.2s;
   }
   
