--- a/Style_index.css
+++ b/Style_index.css
@@ -139,42 +139,6 @@ body.darkmode::before {
 }
 
 
-.WallpaperBtn {
-  position: absolute;
-  top: 85px;
-  right: 10px;
-  z-index: 1000;
-
-  width: 44px;
-  height: 44px;
-  padding: 0;
-  border: none;
-  border-radius: 50%; /* 완전한 원형 */
-  background-color: rgba(255, 255, 255, 0.15);
-  backdrop-filter: blur(4px);
-
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-  box-shadow:
-    0 4px 6px rgba(0, 0, 0, 0.1),  /* 외부 그림자 */
-    inset 0 1px 0 rgba(255, 255, 255, 0.3);  /* 내부 하이라이트 */
-
-  transition: transform 0.2s ease;
-  cursor: pointer;
-}
-
-.WallpaperBtn img {
-  width: 26px;
-  height: 26px;
-}
-
-.WallpaperBtn:hover {
-  transform: scale(1.1);
-}
-
-
 
 
 
@@ -402,25 +366,63 @@ footer {
 
 
 
+
+
+
+
+
+
+/* --------------------------------- 시스템버튼 -----------------------*/
+.WallpaperBtn {
+  position: absolute;
+  top: 85px;
+  right: 10px;
+  z-index: 1000;
+  width: 44px;
+  height: 44px;
+  padding: 0;
+  border: none;
+  border-radius: 50%; /* 완전한 원형 */
+  background-color: rgba(255, 255, 255, 0.15);
+  backdrop-filter: blur(4px);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow:
+    0 4px 6px rgba(0, 0, 0, 0.1),  /* 외부 그림자 */
+    inset 0 1px 0 rgba(255, 255, 255, 0.3);  /* 내부 하이라이트 */
+  transition: transform 0.2s ease;
+  cursor: pointer;
+}
+.WallpaperBtn img {
+  width: 26px;
+  height: 26px;
+}
+.WallpaperBtn:hover {
+  transform: scale(1.1);
+}
+
+
 #topBtn {
     display: none;
     position: fixed;
-    bottom: 15px;
-    right: 15px;
+    bottom: 10px;
+    right: 10px;
     z-index: 999;
+    width: 45px;
+    height: 45px;
     border: none;
     outline: none;
-    background-color: rgba(255, 255, 255, 0.3);
-    color: white;
+    background-color: rgba(255, 255, 255, 0.15);
+    color: #f9f9f9;
     cursor: pointer;
-    padding: 12px 15px;
+    padding: 12px 14px;
     border-radius: 50%;
-    font-size: 20px;
+    font-size: 15px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1),
                 inset 0 1px 0 rgba(255, 255, 255, 0.3);
     transition: background-color 0.2s, transform 0.2s;
   }
-  
   #topBtn:hover {
     background-color: rgba(255, 255, 255, 0.6);
     transform: scale(1.1);
